--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "5.0.1",
     "react-string-replace": "^1.1.0",
     "react-toastify": "^9.0.8",
+    "recharts": "^2.1.15",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
